--- a/src/pages/menu.astro
+++ b/src/pages/menu.astro
@@ -5,7 +5,7 @@ import Menu from '../components/Menu.astro'
 <Layout>
     <Menu />
     <div class="mt-16 items-center text-center">
-        <a href="/" class="bg-nook-600 hover:bg-nook-500 px-6 py-3 rounded-lg transition-colors font-medium">
+        <a href="./" class="bg-nook-600 hover:bg-nook-500 px-6 py-3 rounded-lg transition-colors font-medium">
             &larr; Back to Home
         </a>
     </div>
